Fix issues with alignment

--- a/Lightbox.css
+++ b/Lightbox.css
@@ -17,10 +17,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  max-width: 600px;
-  max-height: 360px;
-  margin-left: -300px;
-  margin-top: -180px;
+  transform: translate(-50%, -50%);
   border: 2px solid #FFF;
   background: #FFF;
   z-index: 1002;
